<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartApp"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with_otp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:textColor="@color/white"/>
        <RelativeLayout
            android:id="@+id/phoneAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/layoutPN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:background="@drawable/et_background">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:ccp_defaultNameCode="IND"
                        app:ccp_countryPreference="IND,PAK,US"

                        />

                    <EditText
                        android:id="@+id/phoneText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phn_nmbr"
                        android:maxLength="12"
                        android:inputType="phone"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:layout_below="@id/layoutPN"
                android:gravity="center_horizontal"
                android:text="@string/a_verification_code_will_be_send_to_this_number"
                tools:ignore="SmallSp" />


                />
        </RelativeLayout>
        <Button
            android:id="@+id/sendOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/authProgress"
            android:layout_marginTop="30dp"
            android:text="@string/send_otp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:background="@drawable/btn_background"/>

    </LinearLayout>

</RelativeLayout>