<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTPActivity"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:textSize="18sp"
            android:text="@string/enter_otp_recieved"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/black"
            tools:ignore="UnusedAttribute" />
        <TextView
            android:id="@+id/ph_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            android:textColor="@color/colorphonenumber"
            />
        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/_00_60"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="20dp"
            android:text="@string/enter_the_otp_below_in_case_we_fail_to_detect_the_sms_automatically"/>

        <com.goodiebag.pinview.Pinview
            android:id="@+id/editTextCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:pinWidth="30dp"
            app:pinHeight="40dp"
            app:pinLength="6"
            app:cursorVisible="false"
            app:forceKeyboard="true"
            app:inputType="number"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal">
            <ProgressBar
                android:id="@+id/authProgress"
                android:visibility="gone"
                android:layout_margin="10dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/btnVerify"
                android:layout_margin="5dp"
                android:background="@drawable/verify_btn_background"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verify"/>


        </LinearLayout>
        <TextView
            android:id="@+id/resendText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/resend_otp"
            android:textStyle="italic"
            android:textSize="14dp"/>
    </LinearLayout>


</RelativeLayout>